--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 }
 
 .container{
- 
     width: 100%;
     margin: 0 auto;
     color: #fff;
@@ -357,7 +356,7 @@ a{
     and (max-device-width: 640px)
     and (-webkit-min-device-pixel-ratio: 1){
         .top{
-            position: absolute;
+          position: fixed;
         }
         .container{
           width: 100%;
@@ -373,7 +372,7 @@ a{
             font-size: 1rem;
         }
         .ups{
-            margin: 0 auto;
+            margin: 3em auto;
             width: 100%;  
         }
         .container h1{
@@ -395,10 +394,10 @@ a{
         width: 100%;
         background-color: rgb(73, 60, 60);
         color: #fff;
-        top: 60vh;
+        top: 65vh;
         border-radius: 10px;
         border-radius: 0;
-        height: 800vh;
+        height: 500vh;
     }
     .tag{
         position: relative;
@@ -439,7 +438,7 @@ a{
     }
     .proqua{
         margin: 1em auto;
-        width: 100%;
+     
         height: 45em;
         display: block;
         background-color: #000;
@@ -460,7 +459,7 @@ a{
     }
     .process p{
         font-size: 1rem;
-        padding-left: 1rem;
+        padding-left: 0;
         padding-right: 1rem;
         text-align: left;
         line-height: 1.5em;
@@ -506,7 +505,7 @@ a{
     and (max-device-width: 1025px)
     and (-webkit-min-device-pixel-ratio: 1){
         .top{
-            position: absolute;
+         
             height: 50vh;
         }
         .container{
@@ -518,7 +517,7 @@ a{
         }
         .ups{
             width: 90%;
-            margin: 0 auto;
+            margin: 4em auto;
         }
         .logo{
             width: 60px;
@@ -558,7 +557,7 @@ a{
         top: 50vh;
         border-radius: 10px;
         border-radius: 0;
-        height: 800vh;
+        height: 205vh;
     }
     .tag{
         position: relative;
@@ -618,9 +617,9 @@ a{
 
 
     .proqua{
-        margin: 1em auto;
-        width: 100%;
-        height: 35em;
+        margin: 1.2em auto;
+      
+        height: 38em;
         display: block;
         background-color: #000;
     }
@@ -639,7 +638,7 @@ a{
         font-weight: 800;
     }
     .process p{
-        font-size: 1rem;
+        font-size: 1.2rem;
         padding-left: 1rem;
         padding-right: 1rem;
         text-align: left;
