--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 *{
     margin: 0;
     padding: 0;
+    --logo-load-time: 200ms;
+    --header-load-time: 400ms;
+    --ul-load-time: 600ms;
   
    
 }
@@ -32,17 +35,24 @@
     border: 4px solid #fff;
     margin-top: 2em;
     margin-left: 2em;
+    animation: fadeIn 500ms ease-in var(--logo-load-time);
+    animation-fill-mode: forwards;
+    transform: translateY(-20px);
+    opacity: 0;
     
- 
 }
 .logo h2{
     font-size: 1.2rem;
 }
 .container h1{
-    font-size: 3.4rem;
+    font-size: 3.2rem;
     font-weight: 600;
     margin-bottom: .5rem;
     letter-spacing: 2px;
+    animation: header-onload 300ms ease-in var(--header-load-time);
+    animation-fill-mode: forwards;
+    transform: translateX(-20px);
+    opacity: 0;
 }
 .container p{
     font-size: 1.5rem;
@@ -51,20 +61,33 @@
     margin-bottom: 1em;
     margin-left: -1.8rem;
     width: 70%;
+    animation: header-onload 300ms ease-in var(--header-load-time);
+    animation-fill-mode: forwards;
+    transform: translateX(-20px);
+    opacity: 0;
 }
 .ups1{
     width: 100%;
     margin-left: -2rem;
+   
 }
 .fas{
     margin: 0 .5rem;
     width: 100%;
     padding-left: .2rem;
+    
 }
 .ul{
    display: flex ;
     margin-left: -.8rem;
     padding-bottom: 10em;
+    animation: ul-onload 300ms ease-in var(--ul-load-time);
+    animation-fill-mode: forwards;
+    transform: translateY(-20px);
+    opacity: 0;
+
+
+    
 }
 ul li{
     display: flex;
@@ -196,7 +219,7 @@ p{
     background-color: #ff9c07;
     border-radius: 5px;
     z-index: 1000;
-    margin-left: 40%;
+    margin-left: 39%;
     margin-top: -.5rem;
     color: #000;
 }
@@ -238,7 +261,7 @@ p{
     font-weight: 800;
 }
 .wrapper .more{
-    margin: 2rem 6em 1rem 6em;
+    margin: 1rem 6em 1rem 6em;
     padding: .2rem 1rem;
     background-color: #ff2907;
     border-radius: 10px;
@@ -423,15 +446,97 @@ a{
         
     }
 }*/
+@keyframes fadeIn {
+    0%{
+        transform: translateY(-20px);
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+  
+       
+    
+@keyframes header-onload{
+    0% {
+        transform: translateX(50px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes ul-onload{
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    75% {
+        transform: translateY(-5px);
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 
-@media (max-width: 1025px)
+
+
+
+
+
+
+@media (max-width: 1520px){
+    .second{
+        top: 60vh;
+    }
+    .ul{
+        padding-bottom: 14em;
+    }
+}
+
+@media (max-width: 1366px){
+    .second{
+        top: 65vh;
+    }
+    /*.about01{
+        width: 78%;
+    }*/
+    .wrapper{
+        width: 300px;
+        background-color: #fff;
+        margin: .5rem .5rem;
+        position: relative;
+        color: #000;
+    }
+}
+@media (max-width: 1080px){
+    .wrapper{
+        width: 300px;
+        background-color: #fff;
+        margin: .5rem .5rem;
+        position: relative;
+        color: #000;
+    }
+    .second{
+       
+        width: 80%;
+        
+    }
+
+}
+@media (max-width: 1024px)
 
 {     
-   
-    
+    .top{
+        position: absolute;
+    }
     .second{
         position: relative;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
         background-color: rgb(73, 60, 60);
         color: #fff;
@@ -481,12 +586,24 @@ a{
         
     }*/
     .wrapper{
-        width: 320px;
+        width: 340px;
         background-color: #fff;
         margin: .5rem .5rem;
         position: relative;
         color: #000;
     }
+    .container h1{
+        font-size: 2rem;
+ 
+    }
+    .container p{
+   
+        font-size: 1.2rem;
+
+    }
+    
+
+  
     
 }
 
@@ -501,6 +618,15 @@ a{
     position: relative;
     width: 100%;
     color: #fff;
+    }
+    .container h1{
+        font-size: 2rem;
+ 
+    }
+    .container p{
+   
+        font-size: 1.2rem;
+
     }
     .profile{
         margin: 1em 2em 0 0;
@@ -537,7 +663,7 @@ a{
        
     }
     .second{
-        width: 90%;
+        width: 100%;
         background-color: rgb(73, 60, 60);
         color: #fff;
         top: 50vh;
@@ -560,7 +686,7 @@ a{
     }
     h3{
         padding: 1em 1em;
-        font-size: 2.5em;
+        font-size: 2.5rem;
         letter-spacing: 1px;
         font-weight: 600;
     }
@@ -568,19 +694,19 @@ a{
       
         padding: 0 1em 0 1.5em;
         margin-bottom: 1em;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
     .about01 p:nth-child(3){
         margin-bottom: 1em;
-        width: 130%;
-        font-size: 1.5rem;
+        width: 100%;
+        font-size: 1.2rem;
     }
 
 
     .proqua{
         margin: 2em auto;
         display: block;
-        height: 65vh;
+   
 
     }
 
@@ -596,17 +722,17 @@ a{
         
     }
     .process h6{
-        padding: 1rem 0 0 1em;
+        padding: .5rem 0 0 1rem;
         font-size: 2em;
         letter-spacing: 2px;
         font-weight: 800;
     }
     .process p{
-        font-size: 1.2rem;
-        padding-left: 0rem;
+        font-size: 1rem;
+
         
         text-align: left;
-        line-height: 1.5em;
+        line-height: 1.2em;
         margin: 1em auto;
         
     }
@@ -671,7 +797,7 @@ a{
      }
     .top{
         position: fixed;
-        padding-bottom: 8em;
+        padding-bottom: 10em;
     }
     .container{
       width: 100%;
@@ -767,8 +893,8 @@ a{
         font-weight: 600;
     }
     .about01 p{
-        width: 130%;
-        padding: 0 1em 0 1.5rem;
+        width: 125%;
+        padding: .5rem 1em 0 1.5rem;
         margin-bottom: 1em;
         font-size: 1.2rem;
         letter-spacing: 1px;
@@ -785,8 +911,16 @@ a{
         letter-spacing: 1px;
         
     }
+    .wrapper{
+        width: 280px;
+        height: 18em;
+        background-color: #fff;
+        margin: .5rem .5rem;
+        position: relative;
+        color: #000;
+    }
     .wrapper .more{
-        margin: 2rem 6em -1rem 6em;
+        margin: 1rem 4em -1rem 4em;
         padding: .2rem 1rem;
         background-color: #ff2907;
         border-radius: 10px;
@@ -803,7 +937,7 @@ a{
         margin: 1em auto;
         background-color: #fff;
         display: block;
-        height: 120vh;
+  
         
     }
     .inner{
@@ -838,6 +972,7 @@ a{
     }
     .qualification{
         width: 90%;
+        color: #000;
       
     }
     .btn2{
