--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     letter-spacing: 2px;
     animation: header-onload 300ms ease-in var(--header-load-time);
     animation-fill-mode: forwards;
-    transform: translateX(-20px);
+    transform: translateX(-80px);
     opacity: 0;
 }
 .container p{
@@ -59,11 +59,11 @@
     font-weight: 500;
     letter-spacing: .5px;
     margin-bottom: 1em;
-    margin-left: -1.8rem;
+   
     width: 70%;
     animation: header-onload 300ms ease-in var(--header-load-time);
     animation-fill-mode: forwards;
-    transform: translateX(-20px);
+    transform: translateX(-80px);
     opacity: 0;
 }
 .ups1{
@@ -119,7 +119,6 @@ ul li:before{
     opacity: 0;
 }
 ul .git:before{
-   
 
     background-color:#000;
    
@@ -165,20 +164,7 @@ ul .git:hover i{
 .fade-in.appear{
     opacity: 1;
 }
-h3{
-    padding: .5rem 1.2em 1rem 1em;
-    font-size: 2em;
-    letter-spacing: 2px;
-    font-weight: 800;
-}
-p{  
-    padding: 0 0 0 1.5em;
-    margin-bottom: 1em;
-    display: flex;
-    font-size: 1.2rem;
-    font-weight: 500;
-    line-height: 1.2;   
-}
+
 .moreMore{
     text-align: center;
     /*margin-top: 7.5em;*/
@@ -187,50 +173,226 @@ p{
     font-size: 1rem;
     padding-top: 1rem;
 }
-.about01 p:nth-child(3){
+/* .about01 p:nth-child(3){
     margin-bottom: 3em;
     width: 100%;
     font-size: 1.2rem;
-}
+} */
 .Aboutss{
-    display: flex;
-    justify-content: space-between;
+    width: 90%;
+    margin: 1em auto;
+    
+    /* display: flex;
+    justify-content: space-between; */
+}
+.Aboutss h3{
+    /* padding: .5rem 1.2em 1rem 1em; */
+    font-size: 2em;
+    letter-spacing: 2px;
+    font-weight: 800;
+    margin-bottom: 1rem;
+}
+.Aboutss p{  
+    /* padding: 0 0 0 1.5em; */
+    margin-bottom: 3.5em;
+    /* display: flex; */
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.2;   
+
 }
 .about01{
-    
-    width: 70%;
+    width: 100%;
+    /* width: 70%; */
 }
 .profile{
     width: 150px;
     height: 150px;
     border-radius: 50%;
     background-color: #fff;
-    margin: .5rem 2em 0 0;  
+    /* margin: .5rem 2em 0 0;   */
+    float: right;
+    shape-outside: circle();
      /*position: absolute;
-   margin-top: -17em;
+    margin-top: -17em;   
     margin-left: 35em; */
     border: 2px solid #ff9c07;
 }
 .tag{
-    position: absolute;
+    margin-left: 35%;
+    margin-right: 35%;
     font-weight: 700;
     font-size: 1.5rem;
     padding: .2rem 1rem;
     background-color: #ff9c07;
     border-radius: 5px;
     z-index: 1000;
-    margin-left: 39%;
-    margin-top: -.5rem;
+    
+    margin-top: -1rem;
     color: #000;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 .wrap{
-    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
     flex-wrap: wrap;
+
+    justify-content: center;
 }
+
+/* .wrap {
+    position:relative;
+    display: flex;
+    flex-wrap: wrap;
+    height: 300px;
+    margin: 20px auto;
+    width: 100%;
+} */
+.wrap .box{
+    position: relative;
+    width: 300px;
+    height: 250px;
+    background-color: #000;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 1em;
+
+}
+/* .wrap  .box .icon{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f00;
+    transition: 0.5s;
+    z-index: 1;
+}
+.wrap  .box:hover .icon{
+    top: 20px;
+    left: calc(50% - 40px);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+.wrap  .box .icon .fa{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
+    transition: 0.5s;
+    color: #fff;
+} */
+/* .wrap  .box:hover .icon .fa{
+    font-size: 40px;
+} */
+/* .wrap .box .content{
+    position: absolute;
+    top: 100%;
+    height: calc(100% - 100px);
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    opacity: 0;
+} */
+/* .wrap  .box:hover .content{
+    top: 100px;
+    opacity: 1;
+}
+.wrap  .box .content h4{
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    font-size: 24px;
+}
+.wrap  .box .content p{
+    margin-bottom: 1rem;
+    padding: 0;
+    color: #fff;
+  
+}
+.wrap .box .content a{
+
+    padding: .2rem 1rem .2rem 1rem;
+    color: #000;
+    text-decoration: none;
+    background-color: #fff;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+.wrap .box .content a:hover{
+    background-color: grey;
+    color: #fff;
+} */
+
+
+/* ------------------------------------------ */
+.wrap  .box .image img{
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f00;
+    transition: 0.5s;
+    z-index: 1;
+}
+.wrap  .box:hover .image img{
+    
+    top: 10px;
+    left: calc(50% - 40px);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+.wrap .box .content{
+  
+    position: absolute;
+    top: 100%;
+    height: calc(100% - 100px);
+    text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    opacity: 0;
+}
+.wrap  .box:hover .content{
+    top: 100px;
+    opacity: 1;
+}
+.wrap  .box .content h4{
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.wrap  .box .content p{
+    margin-bottom: 1rem;
+    padding: 0;
+    color: #fff;
+    font-size: 1rem;
+  
+}
+.wrap .box .content .more{
+    padding: .2rem .5em .2rem .5em;
+    margin: 0 5em 0 5em;
+    
+    color: #fff;
+    text-decoration: none;
+    background-color: red;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+.wrap .box .content .more:hover{
+    background-color: #fff;
+    color: #000;
+}
+/* 
 .wrapper{
     width: 380px;
     height: 18em;
@@ -238,6 +400,40 @@ p{
     margin: .5rem .5rem;
     position: relative;
     color: #000;
+}
+.wrapper:hover{
+    background-size:100%;
+    } 
+.wrapper::before{
+    bottom: 100%;
+}
+.wrapper::after{
+    position: absolute;
+    top:85%;
+    bottom:0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: #fff;
+    overflow:hidden;
+    white-space:pre-wrap;
+    content:attr(data-text);
+
+    background-color: pink;
+    transition:0.7s;
+    font-size:1.5rem;
+    font-weight: 800;
+    line-height: 1.5;
+   
+}
+.wrapper:hover::after{
+    
+    opacity: 1;
+    top:0;
+    bottom: 0;
+    padding:2px; */
+    /* background-color:rgba(60,180,250,0.1); 
+    background-color:rgba(39, 116, 160, 0.1);
 }
 .wrapper:hover{
     transform: scale(1.05);
@@ -273,7 +469,7 @@ p{
 .more:hover{
     background-color: rgb(236, 214, 214);
     color: rgb(73, 60, 60);
-}
+} */
 .proqua{
     position: relative;
     margin: 1em auto;
@@ -461,7 +657,7 @@ a{
     
 @keyframes header-onload{
     0% {
-        transform: translateX(50px);
+        transform: translateX(80px);
         opacity: 0;
     }
     100%{
@@ -505,28 +701,25 @@ a{
     /*.about01{
         width: 78%;
     }*/
-    .wrapper{
+    /* .wrap .box{
         width: 300px;
-        background-color: #fff;
+      
         margin: .5rem .5rem;
         position: relative;
         color: #000;
-    }
+    } */
 }
 @media (max-width: 1080px){
-    .wrapper{
+    .wrap .box{
         width: 300px;
-        background-color: #fff;
+      
         margin: .5rem .5rem;
         position: relative;
         color: #000;
     }
     .second{
-       
-        width: 80%;
-        
+        width: 80%; 
     }
-
 }
 @media (max-width: 1024px)
 
@@ -539,7 +732,7 @@ a{
         width: 100%;
         margin: 0 auto;
         background-color: rgb(73, 60, 60);
-        color: #fff;
+      
         border-radius: 10px;
         top: 35vh;
     }
@@ -585,9 +778,9 @@ a{
         flex-wrap: wrap;
         
     }*/
-    .wrapper{
+    .wrap .box{
         width: 340px;
-        background-color: #fff;
+       
         margin: .5rem .5rem;
         position: relative;
         color: #000;
@@ -601,6 +794,9 @@ a{
         font-size: 1.2rem;
 
     }
+    .tag{
+        margin-left: 38%;
+        margin-right: 38%;
     
 
   
@@ -613,11 +809,11 @@ a{
        
     }
     .container{
-    color: #000;
+    color: #fff;
     padding-top: 0;
     position: relative;
     width: 100%;
-    color: #fff;
+ 
     }
     .container h1{
         font-size: 2rem;
@@ -684,24 +880,49 @@ a{
         text-align: center;
         margin-bottom: 1em;
     }
-    h3{
-        padding: 1em 1em;
+    .Aboutss h3{
+        
         font-size: 2.5rem;
         letter-spacing: 1px;
         font-weight: 600;
     }
-    p{
+    .Aboutss p{
       
-        padding: 0 1em 0 1.5em;
+        /* padding: 0 1em 0 1.5em; */
         margin-bottom: 1em;
         font-size: 1.2rem;
     }
-    .about01 p:nth-child(3){
+    /* .about01 p:nth-child(3){
         margin-bottom: 1em;
         width: 100%;
         font-size: 1.2rem;
+    } */
+    .wrap  .box .content h4{
+        margin: 0;
+        padding: 0;
+        color: #fff;
+        font-size: 1.5rem;
+        font-weight: 800;
+        letter-spacing: 1px;
     }
-
+    .wrap  .box .content p{
+        margin-bottom: 1rem;
+        padding: 0;
+        color: #fff;
+        font-size: 1.2rem;
+      
+    }
+    .wrap .box .content .more{
+        margin: 1rem 4em -1rem 4em;
+        padding: .4rem 1rem;
+        background-color: #ff2907;
+        border-radius: 10px;
+        text-align: center;
+        color: #fff;
+        font-weight: 800;
+     
+    }
+  
 
     .proqua{
         margin: 2em auto;
@@ -729,8 +950,6 @@ a{
     }
     .process p{
         font-size: 1rem;
-
-        
         text-align: left;
         line-height: 1.2em;
         margin: 1em auto;
@@ -742,10 +961,10 @@ a{
         width: 50%;
     
     }
-    .wrapper{
+    .wrap .box{
         width: 320px;
         height: 18em;
-        background-color: #fff;
+       
         margin: .5rem .5rem;
         position: relative;
         color: #000;
@@ -792,8 +1011,9 @@ a{
 }
 
 @media (max-width: 640px){
-     .btn{
-         padding: .5rem .8em;
+    
+    .btn{
+         padding: .5rem .5em;
      }
     .top{
         position: fixed;
@@ -816,7 +1036,7 @@ a{
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        margin-left: 3.5rem;
+        margin-left: 5rem;
     }
     .logo h2{
         font-size: 1rem;
@@ -830,19 +1050,19 @@ a{
      
     }
     .ul{
-        display: flex ;
-        margin-left: -.6rem;
+        display: flex;
+        margin-left: -.16rem;
      }
     .container h1{
         font-size: 2rem;
         font-weight: 600;
-        margin: 1rem 0 1rem 1rem;
+        /* margin: 1rem 0 1rem 1rem; */
         letter-spacing: 1px;
     }
     .container p{
         width: 315px;
         font-size: 1.2rem;
-        margin: 0 1rem 2rem -1rem;
+        /* margin: 0 1rem 2rem -1rem; */
         color: #fff;
     }
     p{
@@ -853,7 +1073,7 @@ a{
     }
    
     .fas{
-        padding-left: 1rem;
+        padding-left: .1rem;
     }
     .second{
         width: 100%;
@@ -886,40 +1106,55 @@ a{
         margin: -1rem 1em 0 0;
     }
 
-    h3{
-        padding: 1rem 0 1.2em 1em;
+    .Aboutss h3{
+        /* padding: 1rem 0 1.2em 1em; */
         font-size: 1.8em;
         letter-spacing: 1px;
         font-weight: 600;
     }
-    .about01 p{
-        width: 125%;
-        padding: .5rem 1em 0 1.5rem;
-        margin-bottom: 1em;
-        font-size: 1.2rem;
-        letter-spacing: 1px;
-    }
-    .about01 p:nth-child(3){
-        font-size: 1.2rem;
-        width: 130%;
-     }
-    p{
+    /* p{
         width: 100%;
         padding: 0 1em 0 2rem;
         margin-bottom: 3em;
         font-size: 1rem;
         letter-spacing: 1px;
         
+    } */
+    .about01 p{
+       
+        padding: .5rem 1.2em 0 0;
+        margin-bottom: 1em;
+        font-size: 1.2rem;
+        letter-spacing: 1.5px;
     }
-    .wrapper{
-        width: 280px;
-        height: 18em;
-        background-color: #fff;
-        margin: .5rem .5rem;
+    /* .about01 p:nth-child(3){
+        font-size: 1.2rem;
+        width: 130%;
+     } */
+   
+    .wrap .box{
+        /* width: 280px;
+        height: 18em; */
+        margin: 1rem .5rem;
         position: relative;
         color: #000;
     }
-    .wrapper .more{
+    .wrap  .box .content h4{
+        margin: 0;
+        padding: 0;
+        color: #fff;
+        font-size: 1.5rem;
+        font-weight: 800;
+        letter-spacing: 1px;
+    }
+    .wrap  .box .content p{
+        margin-bottom: 1rem;
+        padding: 0;
+        color: #fff;
+        font-size: 1rem;
+      
+    }
+    .box .more{
         margin: 1rem 4em -1rem 4em;
         padding: .2rem 1rem;
         background-color: #ff2907;
@@ -928,11 +1163,7 @@ a{
         color: #fff;
         font-weight: 800;
     }
-    .wrapper p{
-    
-        width: 90%;
-        margin: 2em auto 0 -1rem;
-    }
+  
     .proqua{
         margin: 1em auto;
         background-color: #fff;
@@ -1010,4 +1241,5 @@ a{
     .contact{
     background-color: rgb(39, 31, 31);
     }
+}
 }
