--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
     padding: 0;
     --logo-load-time: 200ms;
     --header-load-time: 400ms;
-    --ul-load-time: 600ms;
-  
-   
+    --ul-load-time: 600ms; 
 }
 
 .top{
@@ -14,15 +12,31 @@
     position: fixed;
     background: linear-gradient(to left,   #ff4007,#FFC107 );
 }
-
 .container{
     width: 100%;
     margin: 0 auto;
     color: #fff;
 }
+.container .profiles01{
+    /* width: 50%;
+    margin-left: -28rem; */
+    margin-top: -2rem;
+}
+.profiles01 img{
+    width: 350px;
+    height: 450px;
+}
 .ups{
+    width: 50%;
     margin: 0 auto;
-    width: 50%;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* width: 50%;   */
+}
+.ups1{
+    /* width: 100%; */
+    /* margin-left: 20rem; */
 }
 .logo{
     width: 60px;
@@ -33,8 +47,9 @@
     align-items: center;
     justify-content: center;
     border: 4px solid #fff;
-    margin-top: 2em;
-    margin-left: 2em;
+    margin-top: 4em;
+    margin-left: 5em;
+    margin-bottom: 1rem;
     animation: fadeIn 500ms ease-in var(--logo-load-time);
     animation-fill-mode: forwards;
     transform: translateY(-20px);
@@ -44,8 +59,9 @@
 .logo h2{
     font-size: 1.2rem;
 }
-.container h1{
-    font-size: 3.2rem;
+.content h1{
+
+    font-size: 2.5rem;
     font-weight: 600;
     margin-bottom: .5rem;
     letter-spacing: 2px;
@@ -54,28 +70,22 @@
     transform: translateX(-20px);
     opacity: 0;
 }
-.container p{
+.content p{
     font-size: 1.5rem;
     font-weight: 500;
     letter-spacing: .5px;
     margin-bottom: 1em;
-    margin-left: -1.8rem;
-    width: 70%;
+    /* margin-left: -2rem; */
+    width: 400px;
     animation: header-onload 300ms ease-in var(--header-load-time);
     animation-fill-mode: forwards;
     transform: translateX(-20px);
     opacity: 0;
 }
-.ups1{
-    width: 100%;
-    margin-left: -2rem;
-   
-}
 .fas{
     margin: 0 .5rem;
     width: 100%;
     padding-left: .2rem;
-    
 }
 .ul{
    display: flex ;
@@ -84,10 +94,7 @@
     animation: ul-onload 300ms ease-in var(--ul-load-time);
     animation-fill-mode: forwards;
     transform: translateY(-20px);
-    opacity: 0;
-
-
-    
+    opacity: 0; 
 }
 ul li{
     display: flex;
@@ -101,8 +108,6 @@ ul li{
     /*background-color: #ff9c07;*/
     border: 2px solid #2e86de;
     position: relative;
-  
-
 }
 ul li i{
     color:  #000;
@@ -119,10 +124,7 @@ ul li:before{
     opacity: 0;
 }
 ul .git:before{
-   
-
     background-color:#000;
-   
 }
 ul li:hover:before{
     transform: scale(0.8);
@@ -134,6 +136,7 @@ ul li:hover i{
 ul .git:hover i{
     color: #fff;
 } 
+
 .btn{
     padding: .2rem 1.5rem;
     border-radius: 10px;
@@ -166,13 +169,13 @@ ul .git:hover i{
     opacity: 1;
 }
 h3{
-    padding: .5rem 1.2em 1rem 1em;
+    padding: 1em 0 1rem 0;
     font-size: 2em;
     letter-spacing: 2px;
     font-weight: 800;
 }
 p{  
-    padding: 0 0 0 1.5em;
+
     margin-bottom: 1em;
     display: flex;
     font-size: 1.2rem;
@@ -186,9 +189,28 @@ p{
     color: #fff;
     font-size: 1rem;
     padding-top: 1rem;
+    padding-bottom: 0;
+}
+.standard{
+    width: 100%;
+}
+.standard-wrapper{
+    width: 90%;
+    margin: 0 auto;
+}
+.standards{
+    font-size: 1.4rem;
+    margin: 0 0 1rem 0;
+    font-weight: 800;
+    letter-spacing: 2px;
+}
+.standard-paragpraph{
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    padding-bottom: 5px;
 }
 .about01 p:nth-child(3){
-    margin-bottom: 3em;
+    margin-bottom: 1em;
     width: 100%;
     font-size: 1.2rem;
 }
@@ -197,8 +219,8 @@ p{
     justify-content: space-between;
 }
 .about01{
-    
-    width: 70%;
+    width: 90%;
+    margin: 0 auto;
 }
 .profile{
     width: 150px;
@@ -210,12 +232,13 @@ p{
    margin-top: -17em;
     margin-left: 35em; */
     border: 2px solid #ff9c07;
+    
 }
 .tag{
     position: absolute;
     font-weight: 700;
     font-size: 1.5rem;
-    padding: .2rem 1rem;
+    padding: 0 1rem;
     background-color: #ff9c07;
     border-radius: 5px;
     z-index: 1000;
@@ -243,9 +266,7 @@ p{
     transform: scale(1.05);
 }
 .wrapper p{
-    margin-top: 2em;
- 
-    margin-right: auto;
+    margin: 2em auto;
     font-size: 1.2rem;
     letter-spacing: 1px;
     font-weight: 500;
@@ -269,7 +290,9 @@ p{
     color: #fff;
     font-weight: 800;
 }
-
+hr{
+    margin-bottom: 8px;
+}
 .more:hover{
     background-color: rgb(236, 214, 214);
     color: rgb(73, 60, 60);
@@ -277,7 +300,7 @@ p{
 .proqua{
     position: relative;
     margin: 1em auto;
-    width: 95%;
+    width: 90%;
 
     background-color: rgb(171 230 233 / 20%);
     color: #000;
@@ -312,7 +335,7 @@ p{
     font-weight: 800;
 }
 .process p{
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
     text-align: left;
@@ -334,7 +357,7 @@ p{
     font-weight: 800;
 }
 .qualification p{
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
     text-align: left;
@@ -494,7 +517,7 @@ a{
         top: 60vh;
     }
     .ul{
-        padding-bottom: 14em;
+        padding-bottom: 10em;
     }
 }
 
@@ -506,7 +529,7 @@ a{
         width: 78%;
     }*/
     .wrapper{
-        width: 300px;
+        width: 360px;
         background-color: #fff;
         margin: .5rem .5rem;
         position: relative;
@@ -543,6 +566,27 @@ a{
         border-radius: 10px;
         top: 35vh;
     }
+    /* .ups1{
+        width: 100%;
+        text-align: center;
+    } */
+    /* .content h1{
+        margin-left: -6.5em;
+    }
+    .logo{
+        margin-left: 9em;
+    }
+    .fas {
+        padding-left: 2rem;
+    } */
+    /* .container {
+        width: 80%;
+        margin: 0 auto;
+    } */
+    /* .container .profiles01 {
+        width: 50%;
+        margin-top: -2rem;
+    } */
     /*.container h1{
         font-size: 2.8rem;
         font-weight: 600;
@@ -586,21 +630,21 @@ a{
         
     }*/
     .wrapper{
-        width: 340px;
+        /* width: 340px; */
         background-color: #fff;
         margin: .5rem .5rem;
         position: relative;
         color: #000;
     }
-    .container h1{
-        font-size: 2rem;
- 
+    .tag{
+        margin-left: 42%;
     }
-    .container p{
+   
+    /* .container p{
    
         font-size: 1.2rem;
 
-    }
+    } */
     
 
   
@@ -612,6 +656,9 @@ a{
         padding-bottom: 1em;
        
     }
+    /* .content p{
+        margin-left: -2rem;
+    } */
     .container{
     color: #000;
     padding-top: 0;
@@ -623,18 +670,21 @@ a{
         font-size: 2rem;
  
     }
-    .container p{
+    /* .container p{
    
         font-size: 1.2rem;
 
-    }
+    } */
     .profile{
         margin: 1em 2em 0 0;
     }
 
     .ups{
-        width: 70%;
+        width: 50%;
         margin: 2em auto;
+    }
+    .ups1{
+        width: 90%;
     }
     .logo{
         width: 60px;
@@ -647,7 +697,7 @@ a{
     }
     .ul{
         display: flex ;
-        margin-left: -7rem;
+        margin-left: -5rem;
      }
 
     .fas{
@@ -659,8 +709,7 @@ a{
         padding: 2em 0 8em 0;*/
         font-weight: 500;
         color: #fff;
-        font-size: 1rem;
-       
+        font-size: 1rem;  
     }
     .second{
         width: 100%;
@@ -685,33 +734,29 @@ a{
         margin-bottom: 1em;
     }
     h3{
-        padding: 1em 1em;
+        padding: 1.5rem 1rem;
         font-size: 2.5rem;
         letter-spacing: 1px;
         font-weight: 600;
     }
-    p{
-      
-        padding: 0 1em 0 1.5em;
+    .about01 p{
+        padding: 1rem;
+       
+        /* margin: 1rem; */
         margin-bottom: 1em;
         font-size: 1.2rem;
     }
     .about01 p:nth-child(3){
         margin-bottom: 1em;
-        width: 100%;
+        width: 90%;
+     
         font-size: 1.2rem;
     }
-
-
     .proqua{
         margin: 2em auto;
         display: block;
-   
-
     }
-
-    .process{
-    
+    .process{ 
         width: 50%; 
         margin-bottom: .5rem;  
 
@@ -796,7 +841,7 @@ a{
          padding: .5rem .8em;
      }
     .top{
-        position: fixed;
+        /* position: fixed; */
         padding-bottom: 10em;
     }
     .container{
@@ -816,44 +861,55 @@ a{
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        margin-left: 3.5rem;
+        margin-left: 6.5rem;
     }
     .logo h2{
         font-size: 1rem;
     }
-    .ups1{
+    /* .ups1{
         width: 100%;
        
+    } */
+    .profiles01 img{
+        width: 210px;
+        height: 300px;
+    }
+    .container .profiles01{
+        /* width: 50%;
+        */
+        margin-top: -7rem;
+   
     }
     .ups{
-        margin: 1em auto;
-     
+        margin: 0 auto 1rem auto;
+      
     }
     .ul{
         display: flex ;
         margin-left: -.6rem;
      }
-    .container h1{
+    .content h1{
+        width: 315px;
         font-size: 2rem;
         font-weight: 600;
-        margin: 1rem 0 1rem 1rem;
+        margin: 1rem 1rem 1rem 3rem;
         letter-spacing: 1px;
     }
-    .container p{
-        width: 315px;
+    .content p{
+        width: 300px;
         font-size: 1.2rem;
-        margin: 0 1rem 2rem -1rem;
+        margin: 0 1rem 2rem 3rem;
         color: #fff;
     }
     p{
         width: 100%;
-   
         margin-bottom: 1em;
         font-size: 1.2rem;
     }
    
     .fas{
-        padding-left: 1rem;
+        padding-left: 3rem;
+        width: 315px;
     }
     .second{
         width: 100%;
@@ -875,6 +931,7 @@ a{
         margin-left: 20%;
         margin-right: 20%;
         text-align: center;
+        margin-top: 1.5rem;
     }
     .profile{
 
@@ -887,23 +944,23 @@ a{
     }
 
     h3{
-        padding: 1rem 0 1.2em 1em;
+        padding: 1em 0 1rem 1rem;
         font-size: 1.8em;
         letter-spacing: 1px;
         font-weight: 600;
     }
     .about01 p{
-        width: 125%;
-        padding: .5rem 1em 0 1.5rem;
+        width: 90%;
+        padding: .5rem 1em 0 1rem;
         margin-bottom: 1em;
         font-size: 1.2rem;
         letter-spacing: 1px;
     }
     .about01 p:nth-child(3){
         font-size: 1.2rem;
-        width: 130%;
+   
      }
-    p{
+    .wrapper p{
         width: 100%;
         padding: 0 1em 0 2rem;
         margin-bottom: 3em;
@@ -912,12 +969,15 @@ a{
         
     }
     .wrapper{
-        width: 280px;
+        /* width: 280px; */
         height: 18em;
         background-color: #fff;
         margin: .5rem .5rem;
         position: relative;
         color: #000;
+    }
+    .wrapper h4{
+        margin-top: 2rem;
     }
     .wrapper .more{
         margin: 1rem 4em -1rem 4em;
@@ -934,16 +994,16 @@ a{
         margin: 2em auto 0 -1rem;
     }
     .proqua{
-        margin: 1em auto;
+        margin: 0 auto;
         background-color: #fff;
         display: block;
-  
+        width: 100%;
         
     }
     .inner{
         display: block;
         z-index: 1000; 
-     
+      
     }
 
     .process{
@@ -956,14 +1016,15 @@ a{
     }
 
     .process h6{
-        padding: 1rem 0 0 1em;
+        padding: 1rem 0 0 1rem;
         font-size: 2em;
         letter-spacing: 2px;
         font-weight: 800;
     }
     .process p{
-        font-size: 1rem;
-        padding-left: 0;
+        width: 90%;
+        font-size: 1.2rem;
+        padding-left: 1rem;
         padding-right: 1rem;
         text-align: left;
         line-height: 1.5em;
@@ -973,7 +1034,10 @@ a{
     .qualification{
         width: 90%;
         color: #000;
-      
+  
+    }
+    .qualification p{
+        font-size: 1.2rem;
     }
     .btn2{
         margin-left: 30%;
