--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@
     justify-content: center;
     /* width: 50%;   */
 }
-.ups1{
-    /* width: 100%; */
-    /* margin-left: 20rem; */
-}
+/* .ups1{
+    width: 100%;
+     margin-left: 20rem;
+} */
 .logo{
     width: 60px;
     height: 60px;
